k8s/05-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: multiservice
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
